# cognitive-shift-resources

./: README.md
commands/: post-scarcity.md
linden-pain-clinic/: README.md
linden-pain-clinic/_infra/: .gitignore  pyproject.toml
linden-pain-clinic/_infra/executor/examples/: adversarial-1-unknown-op.yaml  adversarial-2-fake-token.yaml  llm-generated-plan.yaml  sample-plan-001.yaml  sample-plan-002-step4.yaml
linden-pain-clinic/_infra/lib/: audit.py  cli_apply.py  cli_scrub.py  cli_verify.py  composer.py  executor.py  operations.py  prod.py  scrubber.py  tokens.py  vault.py
post-scarcity-mental-models/: HANDOFF.md  INDEX.md  README.md  SYNTHESIS-LOG.md  abundance-graduation.md  agalmic-economy.md  aggregate-state-vector-resurrection.md  asymmetric-theory-of-mind-dominance.md  autonomic-countermeasures.md  bandwidth-bound-migration.md  category-rupture-at-referent-expansion.md  dehumanization-tax-on-participation.md  destructive-sandbox-authentication.md  emotion-conditioning-outlives-memory-veracity.md  externalized-cognition-fragility.md  first-case-precedent-lock-in.md  grammatical-weapon.md  jurisdictional-arbitrage-via-structure-layering.md  legacy-drives-outlast-frame-shifts.md  lifeboat-under-cover.md  local-maximum-collapse.md  new-entrant-scam-surface.md  optimizer-predation-thesis.md  resimulation-as-population-capture.md  reversibility-as-appreciating-asset.md  sovereignty-threshold.md  substrate-independence-of-cognition.md  turing-complete-regulatory-automation.md
second-brain-transplant-to-qmd/: README.md  troubleshooting.md
(+36 files in other folders)
