[project]
name = "linden-infra"
version = "0.1.0"
description = "Trust-boundary MVP: scrubber, vault, executor, audit log for Linden Pain Clinic demo"
requires-python = ">=3.12,<3.13"
dependencies = [
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "spacy>=3.7,<3.9",
    "pynacl>=1.5.0",
    "click>=8.1.7",
    "psycopg[binary]>=3.2",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
]

[project.scripts]
scrub = "lib.cli_scrub:main"
apply-plan = "lib.cli_apply:main"
verify-audit = "lib.cli_verify:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
